# Numerical-Methods-Course

./: CMakeLists.txt  LICENSE  README.md  a.csv  b.csv  csv_parcer.cpp  csv_parcer.hpp  main.cpp  matrix_op.cpp  matrix_op.hpp  qr.cpp  qr.hpp
